[gd_scene load_steps=14 format=3 uid="uid://ppxc5dtytj0o"]

[ext_resource type="LabelSettings" uid="uid://bhh1m84qdtbee" path="res://styles/labels/label_title_64.tres" id="1_52e18"]
[ext_resource type="Script" uid="uid://dq1kqb2k23xl5" path="res://scripts/main_window.gd" id="1_lp381"]
[ext_resource type="Texture2D" uid="uid://b2h0g1a6oeux6" path="res://assets/textures/icons/control-panel-icon.png" id="2_52e18"]
[ext_resource type="LabelSettings" uid="uid://csa3bq3yscrgk" path="res://styles/labels/label_title_56.tres" id="2_ax7xg"]
[ext_resource type="Script" uid="uid://rtwmaxbnulfp" path="res://scripts/options.gd" id="2_k1aoa"]
[ext_resource type="Texture2D" uid="uid://c3lo5yukfegs5" path="res://assets/textures/icons/more-options-ellipsis-icon.png" id="3_c4u0h"]
[ext_resource type="FontFile" uid="uid://bitequibce137" path="res://assets/fonts/Simply the Best/KGSimplytheBest.otf" id="3_k1aoa"]
[ext_resource type="Texture2D" uid="uid://dls4raqr5p8hm" path="res://assets/textures/icons/quit.png" id="7_71cax"]
[ext_resource type="LabelSettings" uid="uid://mb0o2fex4fry" path="res://styles/labels/label_title_48.tres" id="7_j4oxs"]
[ext_resource type="LabelSettings" uid="uid://dt6e1w8og3low" path="res://styles/labels/label_content_32.tres" id="8_c4u0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvr6y"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ax7xg"]
bg_color = Color(0.10196078, 0.10196078, 0.10196078, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_exmdq"]
font = ExtResource("3_k1aoa")
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="MainWindow" type="CanvasLayer"]
script = ExtResource("1_lp381")

[node name="QuizPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = -1
offset_left = 50.0
offset_top = 219.0
offset_right = 356.0
offset_bottom = 425.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qvr6y")

[node name="MarginContainer" type="MarginContainer" parent="QuizPanel"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="QuizPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="QuizPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "This is an example of a Quiz title."
label_settings = ExtResource("8_c4u0h")
autowrap_mode = 3

[node name="Questions" type="Label" parent="QuizPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "X_QUESTIONS"
label_settings = ExtResource("8_c4u0h")

[node name="HBoxContainer" type="HBoxContainer" parent="QuizPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Categories" type="Label" parent="QuizPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X_CATEGORIES"
label_settings = ExtResource("8_c4u0h")

[node name="Button" type="TextureButton" parent="QuizPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("3_c4u0h")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Options" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_k1aoa")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Options"]
clip_children = 1
z_index = 1
custom_minimum_size = Vector2(700, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ax7xg")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Options/PanelContainer"]
custom_minimum_size = Vector2(700, 400)
layout_mode = 2
color = Color(0.6313726, 0.6313726, 0.6313726, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Options/PanelContainer/ColorRect"]
layout_mode = 0
offset_right = 700.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
label_settings = ExtResource("2_ax7xg")
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "LANGUAGE"
label_settings = SubResource("LabelSettings_exmdq")
horizontal_alignment = 1

[node name="LanguageButton" type="OptionButton" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1aoa")
theme_override_font_sizes/font_size = 48
flat = true
alignment = 1

[node name="KeepScreenOnCheck" type="CheckBox" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "KEEP_SCREEN_ON_TOOLTIP"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1aoa")
theme_override_font_sizes/font_size = 48
text = "KEEP_SCREEN_ON"
expand_icon = true

[node name="Control2" type="Control" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Close" type="Button" parent="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1aoa")
theme_override_font_sizes/font_size = 48
text = "CLOSE"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_71cax")

[node name="Ttitle" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HEADER"
label_settings = ExtResource("1_52e18")
horizontal_alignment = 1

[node name="Options" type="TextureButton" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_52e18")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="FavoritesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ColorRect1" type="ColorRect" parent="MarginContainer/VBoxContainer/FavoritesContainer"]
custom_minimum_size = Vector2(40, 5)
layout_mode = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FavoritesContainer"]
layout_mode = 2
text = "FAVORITES"
label_settings = ExtResource("7_j4oxs")

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/VBoxContainer/FavoritesContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AllContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ColorRect1" type="ColorRect" parent="MarginContainer/VBoxContainer/AllContainer"]
custom_minimum_size = Vector2(40, 5)
layout_mode = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AllContainer"]
layout_mode = 2
text = "ALL"
label_settings = ExtResource("7_j4oxs")

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/VBoxContainer/AllContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
mouse_default_cursor_shape = 2
text = "CREATE_QUIZ"

[connection signal="item_selected" from="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/LanguageButton" to="MarginContainer/Options" method="_on_language_button_item_selected"]
[connection signal="toggled" from="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer/KeepScreenOnCheck" to="MarginContainer/Options" method="_on_keep_screen_on_check_toggled"]
[connection signal="pressed" from="MarginContainer/Options/PanelContainer/ColorRect/MarginContainer/VBoxContainer/Close" to="MarginContainer/Options" method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleContainer/Quit" to="MarginContainer/Options" method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
